<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="vk_app_id" translatable="false">4565821</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">8-800</string>
    <string name="clear">Clear</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="other">Other</string>
    <string name="got_it">Got it</string>
    <string name="error_no_phone">No phone number specified. Please specify phone number in settings</string>
    <string name="pref_general">General</string>
    <string name="pref_phone">Phone number</string>
    <string name="vk_group">VK GROUP</string>
    <string name="btn_skype_text">Skype</string>
    <string name="post_successful">Post successful</string>
    <string name="vk_send_group_request_title">Oops, error occurred</string>
    <string name="vk_send_group_request_message">May be you need to sign up to the group</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="login_vk">Login VK</string>
    <string name="logout_vk">Logout vk</string>
    <string name="login_vk_successful">Login vk successful</string>
    <string name="title_fragment_yellow_pages">YellowPagesActivity</string>
    <string name="title_fragment_input">Input Fragment</string>
    <string name="no_data">No data</string>
    <string name="no_data_retry_fetch">Could now load yellow pages, try to refresh once you have connection</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_gsheet_text">Save to Google Sheet</string>

    <string name="pref_smtp_group">SMTP</string>
    <string name="pref_smtp_mailhost">SMTP Server</string>
    <string name="pref_smtp_login">Login</string>
    <string name="pref_smtp_password">Password</string>
    <string name="pref_smtp_from">From address</string>
    <string name="pref_smtp_to">To address</string>
</resources>
