<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general">
        <EditTextPreference
            android:title="@string/pref_phone"
            android:key="pref_phone_dest"
            android:inputType="phone"/>

        <Preference
            android:title="@string/login_vk"
            android:key="pref_login_vk"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_smtp_group">
        <EditTextPreference
            android:title="@string/pref_smtp_mailhost"
            android:key="pref_smtp_mailhost"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_smtp_login"
            android:key="pref_smtp_login"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_smtp_password"
            android:key="pref_smtp_password"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_smtp_from"
            android:key="pref_smtp_from"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/pref_smtp_to"
            android:key="pref_smtp_to"
            android:inputType="text"/>

    </PreferenceCategory>

</PreferenceScreen>