<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="ru.lizaalert.hotline.ui.InputFormActivity" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
        <EditText
            android:id="@+id/et_phone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="phone" />
        <EditText
            android:id="@+id/et_city"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext|flagNoExtractUi" />
        <EditText
            android:id="@+id/et_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext|flagNoExtractUi" />
        <EditText
            android:id="@+id/et_birthday"
            android:hint="@string/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="date" />
        <EditText
            android:id="@+id/et_descr"
            android:hint="@string/other"
            android:inputType="textMultiLine"
            android:lines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone|flagNoExtractUi" />

        <Button
            android:id="@+id/btn_auth"
            android:text="Authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_sms"
            android:text="SMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_email"
            android:text="EMAIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_vk"
            android:text="@string/vk_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_skype"
            android:text="@string/btn_skype_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_gsheet"
            android:text="@string/btn_gsheet_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>

